<resources>
    <string name="app_name">The movie DB</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="sign_up_via_website_themoviedb_org"><u>Sign up via website themoviedb.org</u></string>
    <string name="or">OR</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="known_for">Known For</string>
    <string name="gender">Gender</string>
    <string name="known_credits">Known Credits</string>
    <string name="birthday">Birthday</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="biography">Biography</string>
    <string name="todo">TODO</string>
    <string name="read_more">Read more</string>
    <string name="people">PEOPLE</string>
    <string name="detail">DETAIL</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="runtime">RUNTIME</string>
    <string name="revenue">REVENUE</string>
    <string name="buget">BUGET</string>
    <string name="movie">MOVIE</string>
    <string name="logging_in_please_wait">Logging in please wait</string>
    <string name="sign_in">SIGN IN</string>
    <string name="please_input">Please input Username and Password</string>
    <string name="login_failed">Login failed</string>
    <string name="remove_form_favorite">REMOVE FROM FAVORITE</string>
    <string name="mark_as_favorite">MARK AS FAVORITE</string>
    <string name="loading">Loading...</string>
    <string name="favorite">FAVORITE</string>
    <string name="error">Error</string>
    <string name="log_out">Log Out</string>
    <string name="trailers">Trailers</string>
    <string name="movie_details">Movie Details</string>
    <string name="rating">%s/10</string>
    <string name="release_date">Release Date: %s</string>
    <string name="search_movie">SEARCH MOVIE</string>
    <string name="acting">Acting :%1$s credits</string>
    <string name="born">Born : %1$s</string>
    <string name="birthplace">BirthPlace : %1$s</string>
    <string name="people_detail">People Detail</string>
    <string name="user">User</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="summary">Summary</string>
    <string name="trailer">Trailer</string>
    <string name="reviews">Reviews</string>
    <string name="rate">Rate</string>
</resources>
