<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_movie"
        app:showAsAction="always|withText"
        android:id="@+id/menu_movie"
        android:title="@string/movie"
        tools:ignore="AlwaysShowAction" />
    <item
        android:icon="@drawable/ic_people"
        app:showAsAction="always|withText"
        android:id="@+id/menu_people"
        android:title="@string/people"/>
    <item
        android:icon="@drawable/ic_favorite"
        app:showAsAction="always|withText"
        android:id="@+id/menu_favorite"
        android:title="@string/favorite"/>
    <item
        app:showAsAction="always|withText"
        android:id="@+id/menu_user"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/user"/>
</menu>